# deploying-machine-learning-models

./: .dockerignore  .gitignore
assignment-section-05/: mypy.ini  tox.ini
assignment-section-05/classification_model/: pipeline.py  train_pipeline.py
assignment-section-05/requirements/: requirements.txt  test_requirements.txt
section-04-research-and-development/: 02-machine-learning-pipeline-feature-engineering.ipynb  03-machine-learning-pipeline-feature-selection.ipynb  04-machine-learning-pipeline-model-training.ipynb  05-machine-learning-pipeline-scoring-new-data.ipynb  06-feature-engineering-with-open-source.ipynb  07-feature-engineering-pipeline.ipynb  08-final-machine-learning-pipeline.ipynb  preprocessors_bonus.py  test.csv:Zone.Identifier
section-04-research-and-development/titanic-assignment/: 01-predicting-survival-titanic-assignement.ipynb  02-predicting-survival-titanic-solution.ipynb  03-titanic-survival-pipeline-assignment.ipynb  04-titanic-survival-pipeline-solution.ipynb
section-05-production-model-package/: mypy.ini  pyproject.toml  tox.ini
section-05-production-model-package/regression_model/: train_pipeline.py
section-05-production-model-package/regression_model/config/: core.py  core_strict.py
section-05-production-model-package/requirements/: requirements.txt
section-06-model-serving-api/house-prices-api/app/tests/: test_api.py
